--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "ratio25-client",
   "version": "0.1.0",
   "private": true,
+  "export": "next export",
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build && next export",
     "start": "next start",
     "lint": "next lint"
   },
@@ -20,5 +21,8 @@
     "react-dom": "18.2.0",
     "styled-components": "^5.3.9",
     "typescript": "5.0.4"
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.26"
   }
 }
