--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "ratio25-client",
   "version": "0.1.0",
   "private": true,
-  "export": "next export",
   "scripts": {
     "dev": "next dev",
-    "build": "next build && next export",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
@@ -21,8 +20,5 @@
     "react-dom": "18.2.0",
     "styled-components": "^5.3.9",
     "typescript": "5.0.4"
-  },
-  "devDependencies": {
-    "@types/styled-components": "^5.1.26"
   }
 }
